change model for example 4

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </p>
       <p>
         <a href="example4.html">Example 4</a>
-        - Moving a camera around the model in Example 3 using THREE.OrbitalControls
+        - Moving a camera around an exported Maya model using THREE.OrbitalControls
       </p>
       <p>
         <a href="particles.html">Particles</a>
